ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrAAC.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;

DllImport int AAC_IdentPaf_Empresa_GetCep(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_GetCidade(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_GetCNPJ(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_GetEndereco(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_GetRazaoSocial(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_GetUf(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_SetCep(const INTPTR aacHandle, const PCHAR cep);

DllImport int AAC_IdentPaf_Empresa_SetCidade(const INTPTR aacHandle, const PCHAR cidade);

DllImport int AAC_IdentPaf_Empresa_SetCNPJ(const INTPTR aacHandle, const PCHAR cnpj);

DllImport int AAC_IdentPaf_Empresa_SetEndereco(const INTPTR aacHandle, const PCHAR endereco);

DllImport int AAC_IdentPaf_Empresa_SetRazaoSocial(const INTPTR aacHandle, const PCHAR razaoSocial);

DllImport int AAC_IdentPaf_Empresa_SetUf(const INTPTR aacHandle, const PCHAR uf);

DllImport int AAC_IdentPaf_Paf_GetCupomMania(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetMinasLegal(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetNotaLegalDF(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetParaibaLegal(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetRecompoeNumSerie(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_SetCupomMania(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetMinasLegal(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetNotaLegalDF(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetParaibaLegal(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetRecompoeNumSerie(const INTPTR aacHandle, const BOOL check);